[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://sounds/NFF-menu-03-a.wav" type="AudioStream" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -336.37
margin_top = -27.7187
margin_right = -336.37
margin_bottom = -27.7186
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 360.343
margin_top = 173.804
margin_right = 548.343
margin_bottom = 313.804
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 133.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0.854902, 0.819608, 0.388235, 1 )
custom_constants/shadow_offset_y = 5
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 137.0
margin_right = 161.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
pressed = true
keep_pressed_outside = true
align = 1

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 76.0
margin_right = 200.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 0.94902, 0.54902, 1 )
text = "Go back"
flat = true

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="toggled" from="VBoxContainer/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
